<resources>
    <string name="app_name">Zero References for VB.Net</string>
    <string name="linux_image">linux image</string>
    <string name="general">General</string>
    <string name="bonus">Functions</string>
    <string name="query">Query</string>
    <string name="command">Command:</string>
    <string name="description">Description</string>
    <string name="key">KEY:</string>
    <string name="line">line</string>
    <string name="Return">return</string>
    <string name="return_button">return button</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="empty">  </string>
    <string name="copy_right">Copyrights:All rights reserved!</string>
    <string name="parameters">Parameters:</string>
    <string name="return_type">Return Type:</string>
    <string name="extra">Extra</string>
    <string name="Key_words">Key Words</string>
    <string name="about">about</string>
    <string name="vb_net_key_words">VB.Net Key Words</string>
    <string name="support_contact"><![CDATA[SUPPORT & CONTACT]]></string>


</resources>
