<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="#123456"
              android:orientation="vertical"
              android:weightSum="1"
              >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#DB3446"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:layout_gravity="top"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="ZERO REFERENCES for VB.NET"
        />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="top"
    android:layout_weight="0.6"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/tutorial"
            android:id="@+id/image2"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="Tutorial"
            android:textColor="#fff"
            android:textAlignment="center"/>
        <ImageView

            android:background="@drawable/namespace"
            android:id="@+id/image3"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Namespaces"
            android:layout_marginEnd="5dp"
            android:textColor="#fff"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/function1"
            android:id="@+id/image1"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/bonus"
            android:textColor="#fff"
            android:textAlignment="center"/>
        <ImageView
            android:src="@drawable/setting"
            android:id="@+id/image4"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:visibility="invisible"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:enabled="false"
            android:visibility="invisible"
            android:textColor="#fff"
            android:textAlignment="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/keywords"
            android:id="@+id/image5"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/Key_words"
            android:textColor="#fff"
            android:textAlignment="center"/>
        <ImageView
            android:src="@drawable/about_me"
            android:id="@+id/image6"
            android:contentDescription="@string/linux_image"
            android:layout_width="72dp"
            android:layout_height="72dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#fff"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:textStyle="bold|italic"
        android:text="@string/app_name"
        android:layout_weight="0.1"
        android:textColor="#28B463"
        />

</LinearLayout>
